fix box alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 .header-logo {
-    gap: 200;
+    gap: 10;
 }
 
 .head-container div {
